--- a/frontend/src/entities/order/ui/OrderMax/ui/OrderMax.module.css
+++ b/frontend/src/entities/order/ui/OrderMax/ui/OrderMax.module.css
@@ -8,7 +8,6 @@
     gap: 30px;
 
     border-radius: 10px;
-
     max-width: 1200px;
 }
 
@@ -47,10 +46,9 @@
 
 .productInfo {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     width: 100%;
-    justify-content: space-between;
-    max-width: 1200px;
+    gap: 20px;
 }
 
 .droneImg {
@@ -58,10 +56,19 @@
     height: 200px;
 }
 
+.productBlock {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .product {
     background-color: var(--fourth-background-color);
     border-radius: 10px;
-    min-width: 487px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    min-width: 300px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -78,6 +85,8 @@
     flex-direction: column;
 }
 
+
+
 .weightIcon {
     width: 30px;
     height: 30px;
@@ -86,4 +95,22 @@
 .weight {
     display: flex;  
     gap: 10px;
+}
+
+.button {
+    min-width: 300px;
+}
+
+
+.drone {
+    display: flex;
+}
+
+.droneInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.droneInfoBlock {
 }
