--- a/frontend/src/entities/user/ui/Profile/Profile.module.css
+++ b/frontend/src/entities/user/ui/Profile/Profile.module.css
@@ -6,7 +6,16 @@
 }
 
 .avatar {
-    width: 60px;
-    height: 60px;
     border-radius: 100%;
+    cursor: pointer;
+}
+
+.info {
+    font-size: 40px;
+}
+
+.infoBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
 }
