--- a/frontend/src/shared/ui/Button/Button.module.css
+++ b/frontend/src/shared/ui/Button/Button.module.css
@@ -6,6 +6,7 @@
 	text-align: center;
 	font-size: 17px;
 	font-weight: 600;
+	color: var(--text-color);
 	background: none;
 	border: none;
 }
@@ -13,7 +14,7 @@
 .button_blackWhite {
 	color: var(--button-text-color);
 	border-radius: 20px;
+	font-size: 24px;
 	min-height: 65px;
 	background-color: var(--button-background-color);
-	box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
 }
