--- a/frontend/src/shared/ui/Layout/Layout.module.css
+++ b/frontend/src/shared/ui/Layout/Layout.module.css
@@ -1,7 +1,7 @@
 .root {
     background-color: var(--content-backgound-color);
-    padding: 22px 40px 22px 40px;
-    border-radius: 10px;
+    /* padding: 22px 40px 22px 40px; */
+    /* border-radius: 10px; */
 }
 
 
