--- a/frontend/src/entities/requisition/ui/ReqMax/ui/ReqMax.module.css
+++ b/frontend/src/entities/requisition/ui/ReqMax/ui/ReqMax.module.css
@@ -15,6 +15,21 @@
 
 }
 
+.orderInfoBlock {
+    display: flex;
+    gap: 20px;
+}
+
+.orderInfo {
+    background-color: var(--second-background-color);
+    padding-right: 50px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    gap: 20px;
+    padding: 40px;
+}
+
 .drone {
     min-height: 75px;
 
@@ -30,14 +45,7 @@
     gap: 20px;
 }
 
-.orderInfo {
-    background-color: var(--second-background-color);
-    padding-right: 50px;
-    display: flex;
-    border-radius: 10px;
-    gap: 20px;
-    padding: 40px;
-}
+
 
 .name {
     font-size: 32px;
@@ -126,5 +134,35 @@
 .productName {
     font-size: 24px;
 }
+
+
+@media (max-width: 1400px)  {
+    .removeButton {
+        max-width: none;
+        max-height: 10px;
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 900px)  {
+    .button {
+        font-size: 17px;
+        min-width: 150px;
+        min-height: 50px;
+    }
+
+    .removeButton {
+        font-size: 17px;
+        min-width: 150px;
+        min-height: 50px;
+    }
+    .sendDroneButton {
+        font-size: 17px;
+        min-width: 150px;
+        min-height: 50px;
+    }
+}
+
+
 
 
