--- a/frontend/src/shared/ui/Button/Button.module.css
+++ b/frontend/src/shared/ui/Button/Button.module.css
@@ -11,10 +11,15 @@
 	border: none;
 }
 
-.button_blackWhite {
+.button_button{
 	color: var(--button-text-color);
 	border-radius: 20px;
 	font-size: 24px;
 	min-height: 65px;
 	background-color: var(--button-background-color);
+}
+
+.disabled {
+	cursor: default;
+    opacity: 0.7;
 }
