--- a/frontend/src/pages/drones/ui/DronePage.module.css
+++ b/frontend/src/pages/drones/ui/DronePage.module.css
@@ -1,8 +1,35 @@
 .drones {
+    display: flex;  
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.formBlock {
+    margin-top: 20px;
+}
+
+.dronesList {
     padding: 20px;
     margin-top: 20px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 70px;
+}
+
+.addTitle {
+    margin-bottom: 10px;
+    font-size: 32px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+input {
+    padding: 7px;
+    border-radius: 10px;
 }
